--- a/style.css
+++ b/style.css
@@ -219,9 +219,15 @@ button.icon-button i {
     nav ul li {
         margin: 0.5rem 0;
     }
-    img source {
-        width: 95%;
-        max-width: 500px;
-        padding: 1rem;
+
+
+    /* Estilos para imagens responsivas dentro dos modals */
+    .modal-content img {
+    width: 100%; /* Imagem ocupa 100% da largura do contêiner pai */
+    height: auto; /* Mantém a proporção da imagem */
+    max-width: 100%; /* Garante que a imagem não ultrapasse o tamanho do contêiner */
+    display: block; /* Remove espaços em branco ao redor das imagens */
+    margin: 0 auto; /* Centraliza a imagem horizontalmente */
+    border-radius: 8px; /* Adiciona bordas arredondadas */
 }
 }
