--- a/style.css
+++ b/style.css
@@ -222,17 +222,16 @@ button.icon-button i {
 
 
     /* Estilos para imagens responsivas dentro dos modals */
-    .modal-content img {
+    .modal-content img{
     width: 100%; /* Imagem ocupa 100% da largura do contêiner pai */
     height: auto; /* Mantém a proporção da imagem */
     max-width: 100%; /* Garante que a imagem não ultrapasse o tamanho do contêiner */
     display: block; /* Remove espaços em branco ao redor das imagens */
     margin: 0 auto; /* Centraliza a imagem horizontalmente */
-    border-radius: 8px; /* Adiciona bordas arredondadas */
 }
     .modal-content video {
-    width: 100%;
-    max-width: 100%;
+    width: 100%; /* O vídeo ocupará 100% da largura disponível */
+    max-width: 100%; /* Impede que o vídeo ultrapasse a largura da caixa modal */
     height: auto; /* Mantém a proporção do vídeo */
     display: block; /* Remove o espaço abaixo do vídeo */
     margin: 0 auto; /* Centraliza o vídeo horizontalmente */
