--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
     text-align: center;
     width: 100%;
     max-width: 1200px;
+    margin-top: -230px;
 }
 
 header h1 {
@@ -56,7 +57,17 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
+    padding: 0.5rem;
+    transition: color 0.5s ease-in-out, background-color 0.5s ease-in-out, padding 0.5s ease-in-out, border-radius 0.5s ease-in-out;
 }
+
+nav ul li a:hover {
+    color: #fafafa;
+    background: linear-gradient(to right top, #00f, #0f0);
+    padding: 0.7rem; /* Aumentando levemente o padding no hover */
+    border-radius: 50px; /* Adicionando uma borda arredondada suave */
+}
+
 
 nav ul li a:hover {
     text-decoration: underline;
@@ -82,11 +93,18 @@ h2 {
 section:hover {
     background: linear-gradient(to right top, rgba(0, 0, 255, 0.678), rgba(0, 255, 0, 0.685));
     color: #fafafa;
-    padding: 1rem;
+    padding: 5rem;
     transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out, padding 0.5s ease-in-out;
     border-radius: 8px;
 }
-
+section {
+    margin-top: 30px;
+    background: #72dedede;
+    color: #000;
+    padding: 1rem;
+    border-radius: 8px;
+    transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out, padding 0.5s ease-in-out, border-radius 0.5s ease-in-out;
+}
 
 
 
@@ -97,7 +115,7 @@ section:hover {
 
 /* Modals */
 .modal {
-    margin-top: 70px;
+    margin-top: 50px;
     display: none;
     position: fixed;
     top: 0;
